--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="logo-title">
             <!-- Replace 'your-logo-url' with the actual URL of your logo image -->
             <!-- <img src="your-logo-url" alt="Geri Logo" style="height: 50px;"> -->
-            <h1>Geri Cost Calculation</h1>
+            <h1>Geri Cost Calculator</h1>
         </div>
 
         <div class="input-group">
