--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cost Calculator</title>
+    <title>GERI Cost Calculator</title>
     <!-- Importing Montserrat Font from Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -63,7 +63,7 @@
         <div class="logo-title">
             <!-- Replace 'your-logo-url' with the actual URL of your logo image -->
             <!-- <img src="your-logo-url" alt="Geri Logo" style="height: 50px;"> -->
-            <h1>Geri Cost Calculator</h1>
+            <h1>Cost Calculator</h1>
         </div>
 
         <div class="input-group">
