--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="container">
         <div class="logo-title">
             <!-- Replace 'your-logo-url' with the actual URL of your logo image -->
-            <!-- <img src="your-logo-url" alt="Geri Logo" style="height: 50px;"> -->
+            <img src="https://drive.google.com/file/d/1xdyFbpjl_EirablgEg1OLk5AO0oiacFe/view?usp=drive_link" alt="Geri Logo" style="height: 50px;">
             <h1>Cost Calculator</h1>
         </div>
 
