--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="container">
         <div class="logo-title">
             <!-- Replace 'your-logo-url' with the actual URL of your logo image -->
-            <img src="https://drive.google.com/file/d/1xdyFbpjl_EirablgEg1OLk5AO0oiacFe/view?usp=drive_link" alt="Geri Logo" style="height: 50px;">
+            <img src="https://static.wixstatic.com/media/77e8e0_cf00e4f7fe50495bb89a0dfea0198ea3~mv2.png/v1/crop/x_8,y_0,w_4996,h_1640/fill/w_588,h_194,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/GERI_RGB%20Gradient.png" alt="Geri Logo" style="height: 50px;">
             <h1>Cost Calculator</h1>
         </div>
 
