--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GERI Cost Calculator</title>
-    <!-- Importing Montserrat Font from Google Fonts -->
+    <title>Geri Cost Calculation</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -21,10 +20,13 @@
             width: 90%;
             max-width: 500px;
         }
-        /* Add your logo styling here */
         .logo-title {
             text-align: center;
-            margin-bottom: 1px;
+            margin-bottom: 10px;
+        }
+        .logo-title h1 {
+            margin-top: 5px;
+            margin-bottom: 5px;
         }
         .input-group {
             margin-bottom: 15px;
@@ -55,15 +57,23 @@
             margin-top: 20px;
             font-weight: bold;
             text-align: center;
+            padding: 15px;
+            border: 1px solid #000;
+            border-radius: 4px;
+            background-color: #f9f9f9;
+        }
+        .breakdown {
+            font-size: 0.9em;
+            color: #666;
+            margin-top: 10px;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="logo-title">
-            <!-- Replace 'your-logo-url' with the actual URL of your logo image -->
-            <img src="https://static.wixstatic.com/media/77e8e0_cf00e4f7fe50495bb89a0dfea0198ea3~mv2.png/v1/crop/x_8,y_0,w_4996,h_1640/fill/w_588,h_194,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/GERI_RGB%20Gradient.png" alt="Geri Logo" style="height: 75px;">
-            <h1>Cost Calculator</h1>
+            <!-- <img src="your-logo-url" alt="Geri Logo" style="height: 50px;"> -->
+            <h1>Geri Cost Calculation</h1>
         </div>
 
         <div class="input-group">
@@ -116,20 +126,52 @@
                 return;
             }
 
-            // Perform cost calculation based on material (using the final equations we settled on)
-            let costPrice;
-            if (material === 'wool') {
-                costPrice = 208.41 + (x * y * 0.008896) + (y * 1.289);
-            } else { // cashmere
-                costPrice = 289.02 + (x * y * 0.045174) + (y * 2.514);
+            // Calculate area
+            const area = x * y;
+
+            // Calculate machine days (scales with area)
+            let machine_days;
+            if (area <= 1400) {
+                machine_days = 0.2;
+            } else if (area <= 15000) {
+                machine_days = 0.2 + (1.3 * (area - 1400) / 13600);
+            } else {
+                machine_days = 1.5 + (20.5 * (area - 15000) / 75000);
             }
 
-            // Calculate selling price
+            // Calculate finishing days (scales with area)
+            let finishing_days;
+            if (area <= 1400) {
+                finishing_days = 0.125;
+            } else if (area <= 15000) {
+                finishing_days = 0.125 + (1.875 * (area - 1400) / 13600);
+            } else {
+                finishing_days = 2 + (3 * (area - 15000) / 75000);
+            }
+
+            // Calculate costs
+            const machine_cost = 604.55 * machine_days;
+            const labour_cost = 700 * finishing_days;
+            
+            let material_cost;
+            if (material === 'wool') {
+                material_cost = 208.41 + (x * y * 0.008896) + (y * 1.289);
+            } else { // cashmere
+                material_cost = 289.02 + (x * y * 0.045174) + (y * 1.289);
+            }
+
+            const costPrice = material_cost + machine_cost + labour_cost;
             const sellingPrice = costPrice * multiplier;
 
             // Display the result
             document.getElementById('result').innerHTML = 
-                `Cost Price: HKD ${costPrice.toFixed(2)}<br>Selling Price (${multiplier}x): HKD ${sellingPrice.toFixed(2)}`;
+                `<strong>Cost Price: HKD ${costPrice.toFixed(2)}</strong><br>
+                 <strong>Selling Price (${multiplier}x): HKD ${sellingPrice.toFixed(2)}</strong>
+                 <div class="breakdown">
+                 Machine: ${machine_days.toFixed(2)} days (HKD ${machine_cost.toFixed(2)})<br>
+                 Labour: ${finishing_days.toFixed(2)} days (HKD ${labour_cost.toFixed(2)})<br>
+                 Materials: HKD ${material_cost.toFixed(2)}
+                 </div>`;
         }
     </script>
 </body>
